Switch to tower-emitter

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "readmeFilename": "Readme.md",
   "dependencies": {
     "websocket-multiplexer": "0.0.4",
-    "emitter": "git+ssh://git@github.com:kaerus-component/emitter.git"
+    "emitter": "git+ssh://git@github.com:kaerus-component/emitter.git",
+    "tower-emitter": "~0.1.01"
   }
 }
